@@ -8,6 +8,7 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.rules.ExpectedException;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ExceptionTest extends MainMethodTest {
@@ -27,7 +28,7 @@ public class ExceptionTest extends MainMethodTest {
 
     @Override
     public List<TestCase> generateTestCases() {
-        return List.of(
+        return Arrays.asList(
             new TestCase()
         );
     }
