@@ -7,6 +7,7 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.rules.ExpectedException;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
 
@@ -32,7 +33,7 @@ public class NoSuchElementTest2 extends MainMethodTest {
 
     @Override
     public List<TestCase> generateTestCases() {
-        return List.of(
+        return Arrays.asList(
             new TestCase()
         );
     }
