@@ -5,6 +5,7 @@ import org.hyperskill.hstest.dev.stage.MainMethodTest;
 import org.hyperskill.hstest.dev.testcase.CheckResult;
 import org.hyperskill.hstest.dev.testcase.TestCase;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class SuccessTest extends MainMethodTest {
@@ -15,7 +16,7 @@ public class SuccessTest extends MainMethodTest {
 
     @Override
     public List<TestCase> generateTestCases() {
-        return List.of(
+        return Arrays.asList(
             new TestCase()
         );
     }
